--- a/Bai1.html
+++ b/Bai1.html
@@ -6,20 +6,15 @@
 </head>
 <body>
 <script>
-
-        let arr = [[1,32,4,45,-3,5],[66,5,-9,5,4,22],[45,90,1,33,43,5],[-6,77,23,89,-1,-2]];
-        let arr1 = [[1,1,1,1,1,1],[1,1,1,1,1,1]];
-        let sum = 0;
-        let sum1 = 0;
-
-
-        for(let i = 0; i < arr1.length;i++){
-            for (let j =0;j < arr1[i].length;j++){
-                sum1 += arr1[0][j];
-            }
-            sum = sum1;
+    let a = [9,10,5,7,8,7,5,6];
+    let sum = 0;
+    function findAvg(){
+        for(let i =0; i < a.length;i++){
+            sum += a[i];
         }
-        document.write(sum);
+        return  sum/(a.length);
+    }
+    alert("Điểm trung bình là: " + findAvg(a));
 </script>
 </body>
 </html>
