--- a/Bai3.html
+++ b/Bai3.html
@@ -23,7 +23,8 @@
     }
     return sum;
   }
-  alert(sumOfListPrime(20))
+  let x = +prompt("Nhập số x");
+  alert(sumOfListPrime(x));
 </script>
 </body>
 </html>
