--- a/Bai4.html
+++ b/Bai4.html
@@ -29,10 +29,8 @@
          }
      }
     let canvas = document.getElementById('mycanvas');
-    let hinh1 = new Rectangle(100,100,500,400,"#555");
-    let hinh2 = new Rectangle(400,400,400,300,"red");
-    hinh1.reder(canvas);
-    hinh2.reder(canvas);
+    let hinh = new Rectangle(100,100,500,400,"#555");
+    hinh.reder(canvas);
 </script>
 </body>
 </html>
